
SUBDIRS=. fonts tutorial

install-data-local:
	$(mkinstalldirs) $(DESTDIR)$(kde_confdir)/colors
	$(INSTALL_DATA) "$(srcdir)/Kst Colors" "$(DESTDIR)$(kde_confdir)/colors/Kst Colors"
	$(INSTALL_DATA) "$(srcdir)/Kst Grayscale 256" "$(DESTDIR)$(kde_confdir)/colors/Kst Grayscale 256"
	$(INSTALL_DATA) "$(srcdir)/Kst Spectrum 1021" "$(DESTDIR)$(kde_confdir)/colors/Kst Spectrum 1021"





