add_subdirectory(fonts)
add_subdirectory(tutorial)

SET(colorFolder share/config/colors)

########### install files ###############

install(FILES  "Kst Colors" DESTINATION ${colorFolder})
install(FILES  "Kst Grayscale 256" DESTINATION ${colorFolder})
install(FILES  "Kst Spectrum 1021" DESTINATION ${colorFolder})
install(FILES  "Kst Log Grayscale" DESTINATION ${colorFolder})
install(FILES  "Kst Gamma0.3" DESTINATION ${colorFolder})
install(FILES  "Kst Gamma0.4" DESTINATION ${colorFolder})
install(FILES  "Kst Gamma0.5" DESTINATION ${colorFolder})
install(FILES  "Kst Gamma0.7" DESTINATION ${colorFolder})
install(FILES  "IDL 00 BW-Linear" DESTINATION ${colorFolder})
install(FILES  "IDL 01 Blue-White" DESTINATION ${colorFolder})
install(FILES  "IDL 02 GRN-RED-BLU-WHT" DESTINATION ${colorFolder})
install(FILES  "IDL 03 RED-Temperature" DESTINATION ${colorFolder})
install(FILES  "IDL 04 BLU-GRN-RED-YEL" DESTINATION ${colorFolder})
install(FILES  "IDL 05 STD-Gamma-II" DESTINATION ${colorFolder})
install(FILES  "IDL 06 PRISM" DESTINATION ${colorFolder})
install(FILES  "IDL 07 RED-PURPLE" DESTINATION ${colorFolder})
install(FILES  "IDL 08 GRN-WHT-Linear"DESTINATION ${colorFolder})
install(FILES  "IDL 09 GRN-WHT-Exp" DESTINATION ${colorFolder})
install(FILES  "IDL 10 GRN-PINK" DESTINATION ${colorFolder})
install(FILES  "IDL 11 BLUE-RED" DESTINATION ${colorFolder})
install(FILES  "IDL 12 16-Level" DESTINATION ${colorFolder})
install(FILES  "IDL 13 RAINBOW" DESTINATION ${colorFolder})
install(FILES  "IDL 14 STEPS" DESTINATION ${colorFolder})
install(FILES  "IDL 15 STERN-Special" DESTINATION ${colorFolder})
install(FILES  "IDL 16 Haze" DESTINATION ${colorFolder})
install(FILES  "IDL 17 BLU-Pastel-RED" DESTINATION ${colorFolder})
install(FILES  "IDL 18 Pastels" DESTINATION ${colorFolder})
install(FILES  "IDL 19 Hue-Sat-Light1" DESTINATION ${colorFolder})
install(FILES  "IDL 20 Hue-Sat-Light2" DESTINATION ${colorFolder})
install(FILES  "IDL 21 Hue-Sat-Value1" DESTINATION ${colorFolder})
install(FILES  "IDL 22 Hue-Sat-Value2" DESTINATION ${colorFolder})
install(FILES  "IDL 23 Purple-Red-Stripe" DESTINATION ${colorFolder})
install(FILES  "IDL 24 Beach" DESTINATION ${colorFolder})
install(FILES  "IDL 25 Mac-Style" DESTINATION ${colorFolder})
install(FILES  "IDL 26 Eos-A" DESTINATION ${colorFolder})
install(FILES  "IDL 27 Eos-B" DESTINATION ${colorFolder})
install(FILES  "IDL 28 Hardcandy" DESTINATION ${colorFolder})
install(FILES  "IDL 29 Nature" DESTINATION ${colorFolder})
install(FILES  "IDL 30 Ocean" DESTINATION ${colorFolder})
install(FILES  "IDL 31 Peppermint" DESTINATION ${colorFolder})
install(FILES  "IDL 32 Plasma" DESTINATION ${colorFolder})
install(FILES  "IDL 33 Blue-Red" DESTINATION ${colorFolder})
install(FILES  "IDL 34 Rainbow" DESTINATION ${colorFolder})
install(FILES  "IDL 35 Blue-Waves" DESTINATION ${colorFolder})
install(FILES  "IDL 36 Volcano" DESTINATION ${colorFolder})
install(FILES  "IDL 37 Waves" DESTINATION ${colorFolder})
install(FILES  "IDL 38 Rainbow18" DESTINATION ${colorFolder})
install(FILES  "IDL 39 Rainbow-White" DESTINATION ${colorFolder})
install(FILES  "IDL 40 Rainbow-Black" DESTINATION ${colorFolder})
